hphp/test/zend/good/ext/posix/tests/posix_mknod_basic.php.skipif
<?php
if (!extension_loaded('posix')) die('skip - POSIX extension not loaded'); 
if (!function_exists('posix_mknod')) die('skip posix_mknod() not found');
?>