hphp/test/zend/bad/ext/posix/tests/posix_setgid_error.php.skipif
<?php 
        if(!extension_loaded("posix")) print "skip - POSIX extension not loaded"; 
?>
Marco Fabbri mrfabbri@gmail.com
Francesco Fullone ff@ideato.it
#PHPTestFest Cesena Italia on 2009-06-20